--- a/client.html
+++ b/client.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Chat App</title>
+<script src="https://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/aes.js"></script>
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
@@ -228,6 +229,7 @@ function ban(u, rid){
 <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+	<a id="creativeLink" href="creative.txt">creative.txt</a>
 	<div id="infoBar">Open Forum</div>
 	<div id="rooms">
     	<ul id="roomList">
